# demo

./: .gitignore  PLAN.md  README.md
.github/workflows/: ci.yml
.planwerk/: settings.toml
.planwerk/completed/: PD-0001-a001-implement-project-scaffold-and-database-layer.json  PD-0002-a002-implement-orm-models-and-database-migration.json
.planwerk/features/: PD-0001-a001-implement-project-scaffold-and-database-layer.json  PD-0001-a001-project-scaffold-database-layer.json  PD-0002-a002-implement-orm-models-and-database-migration.json  PD-0002-a002-orm-models-migration.json  PD-0003-a003-add-pydantic-schemas-and-unit-tests.json  PD-0003-a003-pydantic-schemas-unit-tests.json  PD-0004-b001-auth-services.json  PD-0005-b002-auth-tests.json  PD-0006-c001-status-crud.json  PD-0007-c002-user-profiles-health-logging.json  PD-0008-c003-rest-api-integration-tests.json  PD-0009-d001-parser-model.json  PD-0010-d002-integration-enrichment.json  PD-0011-d003-github-linking-tests.json  PD-0012-e001-models-seeding.json  PD-0013-e002-xp-streaks-achievement-engine.json  PD-0014-e003-gamification-endpoints-schemas.json  PD-0015-e004-gamification-tests.json  PD-0016-f001-connection-manager-endpoint.json  PD-0017-f002-broadcast-notifications.json  PD-0018-f003-websocket-tests.json  PD-0019-g001-project-scaffold-api-client.json  PD-0020-g002-auth-state-pages.json  PD-0021-g003-auth-component-tests.json  PD-0022-h001-core-components.json  PD-0023-h002-statusfeed-websocket.json  PD-0024-h003-profile-leaderboard-pages.json  PD-0025-h004-frontend-tests.json  PD-0026-i001-docker-makefile.json  PD-0027-i002-playwright-e2e-tests.json  PD-0028-i003-ci-pipeline.json
.planwerk/progress/: PD-0001-a001-implement-project-scaffold-and-database-layer.json
.planwerk/reviews/: PD-0001-a001-implement-project-scaffold-and-database-layer-review-1.json  PD-0001-a001-implement-project-scaffold-and-database-layer-review-2.json  PD-0001-a001-implement-project-scaffold-and-database-layer-review-3.json  PD-0001-a001-implement-project-scaffold-and-database-layer.json  PD-0001-github-review-by-berendt-external-1.json  PD-0001-github-review-by-berendt-external-2.json  PD-0001-github-review-by-sourcery-ai-bot-external-1.json  PD-0001-new-github-pr-comments-by-sourcery-ai-bot-external-2.json  PD-0002-a002-implement-orm-models-and-database-migration-review-1.json  PD-0002-a002-implement-orm-models-and-database-migration-review-2.json  PD-0002-github-review-by-sourcery-ai-bot-external-1.json
.serena/: project.yml
backend/: .coverage  .env.example  .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_02_28_2200-a1b2c3d4e5f6_initial_users_and_status_updates.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/routes/: health.py
backend/app/models/: __init__.py  status.py  user.py
backend/tests/: __init__.py  conftest.py
backend/tests/unit/: test_config.py  test_database.py  test_health.py  test_main.py  test_migrations.py  test_models.py  test_scaffold.py
docs/reference/backend/: models.md  scaffold.md
